--- a/RestaurantRater/Views/Home/Index.cshtml
+++ b/RestaurantRater/Views/Home/Index.cshtml
@@ -13,8 +13,7 @@
         <h2>Rate it</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            enables a c.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
